treino de formulários e CSS

--- a/nao_sei/validaçao.html
+++ b/nao_sei/validaçao.html
@@ -92,6 +92,7 @@
         botao.addEventListener('click', entrar)
         function entrar () {
             if (senha.length > 8) {
+                res.innerHTML = 'certo'
             } else {
             }
         }
