--- a/CSS training/credit_card.html
+++ b/CSS training/credit_card.html
@@ -8,64 +8,77 @@
     <link rel="stylesheet" href="cartao.css">
 </head>
 <body>
+    <input type="checkbox" name="virar" id="virar">
+
+    <label class="flip-container" for="virar">
+    <div class="flip-container">
         <form>
-            <div id="cartao">
-                <span id="titulo">Cartão de Crédito</span>
-                <div id="number_box">
-                    <label for="card_number">Número do cartão</label>
-                    <input type="text" name="card_number" id="card_number" size="4" maxlength="4">
-                    <input type="text" name="card_number" id="card_number" size="4" maxlength="4">
-                    <input type="text" name="card_number" id="card_number" size="4" maxlength="4">
-                    <input type="text" name="card_number" id="card_number" size="4" maxlength="4">
+            <div class="flipper">
+                <div id="cartao">
+                    <span id="titulo">Cartão de Crédito</span>
+                    <div id="number_box">
+                        <label for="card_number">Número do cartão</label>
+                        <input type="text" name="card_number" id="card_number" size="4" maxlength="4">
+                        <input type="text" name="card_number" id="card_number" size="4" maxlength="4">
+                        <input type="text" name="card_number" id="card_number" size="4" maxlength="4">
+                        <input type="text" name="card_number" id="card_number" size="4" maxlength="4">
+                    </div>
+                    <div id="data_year">
+                        <label for="day">Day</label>
+                        <select name="day" id="day">
+                            <option value="">1</option>
+                            <option value="">2</option>
+                            <option value="">3</option>
+                            <option value="">4</option>
+                            <option value="">5</option>
+                            <option value="">6</option>
+                            <option value="">7</option>
+                            <option value="">8</option>
+                            <option value="">9</option>
+                            <option value="">10</option>
+                            <option value="">11</option>
+                            <option value="">12</option>
+                            <option value="">13</option>
+                            <option value="">14</option>
+                            <option value="">15</option>
+                            <option value="">16</option>
+                            <option value="">17</option>
+                            <option value="">18</option>
+                            <option value="">19</option>
+                            <option value="">20</option>
+                            <option value="">21</option>
+                            <option value="">22</option>
+                            <option value="">23</option>
+                            <option value="">24</option>
+                            <option value="">25</option>
+                            <option value="">26</option>
+                            <option value="">27</option>
+                            <option value="">28</option>
+                            <option value="">29</option>
+                            <option value="">30</option>
+                        </select>
+                        <label for="year">Year</label>
+                        <select name="year" id="year">
+                            <option value="">18</option>
+                            <option value="">19</option>
+                            <option value="">20</option>
+                            <option value="">21</option>
+                            <option value="">22</option>
+                        </select>
+                    </div>
+                    <span id="name">Vinicius A Lavoura</span>
+                    <div id="band_cartao">
+                        <img src="images/bandeira_cartao.png" alt="" width="90px" height="90px">
+                    </div>
                 </div>
-                <div id="data_year">
-                    <label for="day">Day</label>
-                    <select name="day" id="day">
-                        <option value="">1</option>
-                        <option value="">2</option>
-                        <option value="">3</option>
-                        <option value="">4</option>
-                        <option value="">5</option>
-                        <option value="">6</option>
-                        <option value="">7</option>
-                        <option value="">8</option>
-                        <option value="">9</option>
-                        <option value="">10</option>
-                        <option value="">11</option>
-                        <option value="">12</option>
-                        <option value="">13</option>
-                        <option value="">14</option>
-                        <option value="">15</option>
-                        <option value="">16</option>
-                        <option value="">17</option>
-                        <option value="">18</option>
-                        <option value="">19</option>
-                        <option value="">20</option>
-                        <option value="">21</option>
-                        <option value="">22</option>
-                        <option value="">23</option>
-                        <option value="">24</option>
-                        <option value="">25</option>
-                        <option value="">26</option>
-                        <option value="">27</option>
-                        <option value="">28</option>
-                        <option value="">29</option>
-                        <option value="">30</option>
-                    </select>
-                    <label for="year">Year</label>
-                    <select name="year" id="year">
-                        <option value="">18</option>
-                        <option value="">19</option>
-                        <option value="">20</option>
-                        <option value="">21</option>
-                        <option value="">22</option>
-                    </select>
-                </div>
-                <span id="name">Vinicius A Lavoura</span>
-                <div id="band_cartao">
-                    <img src="images/bandeira_cartao.png" alt="" width="90px" height="90px">
+                <div id="cartao_back">
+                    <span id="retangulo"></span>
+                    <label for="segurança"></label>
+                    <input required type="text" name="segurança" id="segurança" maxlength="4">
                 </div>
             </div>
         </form>
+    </div>
+</label>
 </body>
 </html>
