--- a/teste.html
+++ b/teste.html
@@ -7,6 +7,8 @@
     <title>Document</title>
     <style>
         #aside {
+            z-index: 10;
+            display: inline-block;
             background-color: black;
             color: white;
             width: 200px;
