--- a/CSS training/formulario.html
+++ b/CSS training/formulario.html
@@ -4,57 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Satisfação</title>
-    <link rel="stylesheet" href="formulario.css">
+    <title>Document</title>
+    <style>
+        body {
+            background-color: blue;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Título</h1>
-    </header>
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Contato</a>
-        <a href="#">Sobre</a>
-    </nav>
-    <main>
-        <section>
-            <form>
-                <label for="check">
-                    <input type="checkbox" name="check" id="check">
-                    <div class="container-form">
-                        <div class="newsletter">
-                            <label for="email">Newsletter</label>
-                            <input autocomplete="email" required type="email" name="email" id="email">
-                        </div>
-                        <div class="botao">
-                            <button>Enviar</button>
-                        </div>
-                        <span id="seta"> ▶</span>
-                    </div>
-                </label>
-            </form>
-        </section>
-        <!--Continuar login-box-->
-        <form action="#" id="login-box">
-            <div id="user-box">
-                <label for="user">Usuário: </label>
-                <input type="text" name="user" id="user">
-            </div>
-            <div id="senha-box">
-                <label for="senha">Senha: </label>
-                <input type="password" name="senha" id="senha" aria-describedby="salvar-senha">
-                <span id="salvar-senha" class="salvar-senha">
-                    <input type="checkbox" name="save" id="save">
-                    <label for="save">Salvar senha</label>
-                </span>
-                <span id="recuperar-senha">
-                    <a href="#">Esqueci minha senha</a> 
-                </span>
-            </div>
-            <div id="botao-box">
-                <button>Login</button>
-            </div>
-        </form>
-    </main>
+    
 </body>
 </html>
