--- a/CSS training/formulario.html
+++ b/CSS training/formulario.html
@@ -11,7 +11,7 @@
         }
     </style>
 </head>
-<body style="background-color:crimson ;">
+<body style="background-color:crimson ; width: 100px; height: 100px;">
     
 </body>
 </html>
