--- a/CSS training/credit-card/credit_card.html
+++ b/CSS training/credit-card/credit_card.html
@@ -68,7 +68,7 @@
                     </div>
                     <span id="name">Vinicius A Lavoura</span>
                     <div id="band_cartao">
-                        <img src="images/bandeira_cartao.png" alt="" width="90px" height="90px">
+                        <img src="../images/bandeira_cartao.png" alt="" width="90px" height="90px">
                     </div>
                 </div>
                 <div id="cartao_back">
