concluído mais uma parte da landing page

--- a/CSS_training/landingpage01/index.html
+++ b/CSS_training/landingpage01/index.html
@@ -118,6 +118,62 @@
             </div>
         </div>
     </section>
+    <!--Conference e Events-->
+    <section id="events">
+        <h1>Conferences & Events</h1>
+        <div id="conferences">
+            <span id="inter">interviews</span>
+            <span id="talk">talks</span>
+            <span id="exib">Exhibition</span>
+        </div>
+        <div id="paises">
+            <div id="local1" class="locais">
+                <p>2023</p>
+                <img src="images/img-1.png" alt="">
+                <p>Bump Festival</p>
+                <p><img src="images/local-img-p.png" alt="" height="30px"> Kortrijk, BE</p>
+                <p><img src="images/msg-img-p.png" alt="" height="20px">Design Trends</p>
+            </div>
+            <div id="local2" class="locais">
+                <p>2023</p>
+                <img src="images/img-2.png" alt="">
+                <p>FCR Creative</p>
+                <p><img src="images/local-img-p.png" alt="" height="30px"> Paris, FR</p>
+                <p><img src="images/msg-img-p.png" alt="" height="20px">Creativity</p>
+            </div>
+            <div id="local 3" class="locais">
+                <p>2024</p>
+                <img src="images/img-3.png" alt="">
+                <p>Open Studio</p>
+                <p><img src="images/local-img-p.png" alt="" height="30px"> Glasgow, UK</p>
+                <p><img src="images/msg-img-p.png" alt="" height="20px">Trends e Hype</p>
+            </div>
+        </div>
+    </section>
+    <!-- 2023 best of the best-->
+    <section id="best">
+        <div id="logo">
+            <div id="oskar-logo">
+                <h1>ok</h1>
+                <div>
+                    <p>oskar</p>
+                    <p>kadera</p>
+                </div>
+            </div>
+            <div id="tittle-best">
+                <h1>2023 Best <br> of the best</h1>
+                <p>Mattis enime tellus elementum sagittis <br> rem ipsum dolor amet</p>
+            </div>
+            <div id="learn-more">
+                <span id="yellow-block"></span>
+                <span id="trans-block"><p>▷</p></span>
+                <span id="white-block"><p>View Case</p></span>
+            </div>
+        </div>
+        <div id="img-branding-2">
+            <img src="images/branding-img-2.png" alt="">
+        </div>
+    </section>
     <script src="menu.js"></script>
 </body>
 </html>
