Finalizado a landing page

--- a/CSS_training/landingpage01/index.html
+++ b/CSS_training/landingpage01/index.html
@@ -174,6 +174,54 @@
             <img src="images/branding-img-2.png" alt="">
         </div>
     </section>
+    <section id="personal-award">
+        <div class="container-carrosel">
+            <div class="carrosel-conteudo">
+                <div class="carrosel-controle">
+                    <h1>Personal <br> Awards</h1>
+                    <div id="btns">
+                        <button class="left"><img src="images/arrow -left.png" alt="" width="20px"></button>
+                        <button class="right"><img src="images/arrow.png" alt="" width="20px"></button>
+                    </div>
+                </div>
+                <div id="award1" class="awards">
+                    <img src="images/circle-img.png" alt="" width="60px" height="60px">
+                    <h2>World Brand <br> Design Awards</h2>
+                    <span class="year">2022</span>
+                </div>
+                <div id="award2" class="awards">
+                    <img src="images/triagle-img.png" alt="" width="60px" height="60px">
+                    <h2>The Young Ones <br> ADC Competition</h2>
+                    <span class="year">2022</span>
+                </div>
+                <div id="award3" class="awards">
+                    <img src="images/cubo-img.png" alt="" width="60px" height="60px">
+                    <h2>Graphic Design <br> USA Award</h2>
+                    <span class="year">2022</span>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="container-redes">
+        <div id="redes-sociais">
+            <h1>You can find <br> me here:</h1>
+            <span class="box-sociais" id="twitter">
+                <div><img src="images/twitter-logo-p.png" alt="" width="50px"></div>
+            </span>
+            <span class="box-sociais" id="twitch">
+                <div><img src="images/twitch-logo-p.png" alt="" width="55px"></div>
+            </span>
+            <span class="box-sociais" id="facebook">
+                <div><img src="images/face-logo-p.png" alt="" width="50px"></div>
+            </span>
+            <span class="box-sociais" id="instagram">
+                <div><img src="images/insta-logo-p.png" alt="" width="50px"></div>
+            </span>
+        </div>
+    </section>
+    <footer>
+        <p>Design created by Mike|Creative Mints <a href="https://dribbble.com/creativemints" target="_blank"> Follow and support Mike</a></p>
+    </footer>
     <script src="menu.js"></script>
 </body>
 </html>
